--- a/src/scss/_mq.scss
+++ b/src/scss/_mq.scss
@@ -11,7 +11,7 @@
 	}
 	.header__wrapper {
 		grid-template-columns: 1fr 1fr;
-		padding-left: 8rem;
+		padding-left: 4rem;
 		padding-top: 3rem;
 		color: black;
 	}
@@ -45,11 +45,12 @@
 		gap: 0rem;
 	}
 	.header__image {
-		width: 90%;
+		width: 100%;
 		margin-top: 1rem;
 	}
 	.header__cta {
-		padding: 0.5rem;
+		font-size: 2rem;
+		padding: 1rem;
 		margin-block: auto;
 	}
 	.pricing-wrapper {
