--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,7 @@
 	position: relative;
 }
 body {
-	background-color: #fde5e5;
+	background-color: hsla(0, 0, 0, 0.5);
 	margin-bottom: 5rem;
 	margin-top: 2rem;
 }
